syntax = "proto3";
option go_package = "/game";
package pb;
import "common/baseinfo.proto";
// kindID 2002
//场景
message BrtoubaoSceneResp{
  int64 timeStamp = 1;            //时间戳
  string inning = 2;              //牌局号
  repeated int32 chips = 3;       //筹 码
  repeated bytes awardAreas = 4;  //开奖记录(路单)
  repeated int64 areaBets = 5;    //各下注区当前总下注额
  repeated int64 myBets = 6;      //个人在各下注区的总下注额
  PlayerList allPlayers = 7;  //玩家列表
}
//状态
// 服务端推送
//(准备)
message BrtoubaoStateStartResp {
  TimeInfo times = 1;
  string inning = 2;               // 牌局号
}
//(下注)
message BrtoubaoStatePlayingResp {
  TimeInfo times = 1;
}
//(开奖)
message BrtoubaoStateOpenResp {
  TimeInfo times = 1;
  BrtoubaoOpenResp openInfo = 2;
}
//(结束)
message BrtoubaoStateOverResp {
  TimeInfo times = 1;
}
//游戏消息
//下注
message BrtoubaoBetReq{
  int32 betArea = 1;        //下注区域
  int64 betScore = 2;        //下注金额
}
message BrtoubaoBetResp{
  int64 userID = 1;
  int32 betArea = 2;        //下注区域
  int64 betScore = 3;        //下注金额
}
//结束
message BrtoubaoOpenResp{
  bytes dice = 1;       //开奖数据
  bytes awardArea = 2;  //中奖区域 1~24
}
//结算
message BrtoubaoCheckoutResp{
  int64 myAcquire = 1;        //获得金币(结算)
  repeated int64 acquires = 2;//各个区域输赢情况
}
/////////////预留协议///////////////////////////
//抢庄
message BrtoubaoHostReq {
  bool isWant = 1;//true上庄 false取消上庄
}
message BrtoubaoHostResp {
  int64 userID = 1;
  bool isWant = 2;//true上庄 false取消上庄
}
//超级抢庄
message BrtoubaoSuperHostReq {
  bool isWant = 1;//true上庄 false取消
}
message BrtoubaoSuperHostResp {
  int64 userID = 1;
  bool isWant = 2;//true上庄 false取消
}
// 从零开始，后面累加1 共25区域
// 下注区域
//    AREA_Big    = 0 //大
//    AREA_Small         //小
//    AREA_Single        //单
//    AREA_Double        //双
//    AREA_Baozi
//    AREA_Baozi_1
//    AREA_Baozi_2
//    AREA_Baozi_3
//    AREA_Baozi_4
//    AREA_Baozi_5
//    AREA_Baozi_6
//    AREA_4
//    AREA_5
//    AREA_6
//    AREA_7
//    AREA_8
//    AREA_9
//    AREA_10
//    AREA_11
//    AREA_12
//    AREA_13
//    AREA_14
//    AREA_15
//    AREA_16
//    AREA_17
